# Droidspaces-OSS_TrierarchWaylandCompositor_built-in

./: .gitmodules  Makefile  README.md  README_CN.md
.github/workflows/: ci.yml
Android/: .gitignore
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: validate_rootfs.sh
Android/app/src/main/assets/boot-module/: sepolicy.rule
Android/app/src/main/java/com/droidspaces/app/: DroidspacesApplication.kt  WaylandActivity.kt
Android/app/src/main/java/com/droidspaces/app/ui/component/: ContainerCard.kt
Android/app/src/main/java/com/droidspaces/app/ui/dialog/: PointerMode.kt
Android/app/src/main/java/com/droidspaces/app/ui/navigation/: DroidspacesNavigation.kt
Android/app/src/main/java/com/droidspaces/app/ui/screen/: ContainerConfigScreen.kt  ContainerDetailsScreen.kt  ContainersScreen.kt  ControlPanelScreen.kt  EditContainerScreen.kt  InstallationSummaryScreen.kt  MainTabScreen.kt  RequirementsScreen.kt  SettingsScreen.kt  WaylandScreen.kt
Android/app/src/main/java/com/droidspaces/app/ui/viewmodel/: ContainerInstallationViewModel.kt  SystemStatsViewModel.kt
Android/app/src/main/java/com/droidspaces/app/util/: Constants.kt  ContainerDiskUsageManager.kt  ContainerInstaller.kt  ContainerManager.kt  PreferencesManager.kt
Android/app/src/main/java/com/droidspaces/app/wayland/: WaylandCoordMapper.kt  WaylandCursorVisibilityPolicy.kt  WaylandDisplayView.kt  WaylandImeRecovery.kt  WaylandManager.kt  WaylandNotification.kt  WaylandSurface.kt  WaylandTabletController.kt  WaylandTouchLayout.kt  WaylandTouchpadController.kt  WaylandTwoFingerScroll.kt
Android/app/src/main/java/com/droidspaces/app/wayland/input/: HardwareKeyEventPolicy.kt  HardwareKeyboardRouter.kt  SoftKeyboardView.kt  SoftKeyboardView.kt.txt
Android/app/src/main/jni/: CMakeLists.txt  backup-jni.c  ds_wayland_bridge.c
Android/app/src/main/jniLibs/arm64-v8a/: README.md
Android/app/src/main/res/values/: strings.xml
Documentation/: Kernel-Configuration.md  community-supported-devices.md
Documentation/zh-CN/: GPU-Acceleration.md  Networking-From-Zero.md  community-supported-devices.md
init/android-service/selinux-testing/: ds_log_spam_fix.cil
scripts/: build-wayland-libs.sh
src/: android.c  boot.c  config.c  container.c  daemon.c  documentation.c  droidspace.h  environment.c  hardware.c  main.c  monitor.c  mount.c  pid.c  pulseaudio-android.c  seccomp.c  socketd_bridge.c  socketd_protocol.h  utils.c
src/android/: pulseaudio.c  wayland.c
src/anland/: anland.c
src/include/: droidspace.h
src/net/: dhcp.c  iptables.c  network.c
src/socketd/: Makefile  container_inspect.cpp  container_list.h
